switch search to cursor based pagination & implement sort
